--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 /* MAIN STYLES */
 body {
+  color: #232425;
   margin: 0.5em 1.5em;
 }
 
@@ -8,7 +9,8 @@ body {
 }
 
 .title {
+  width: auto;
   padding: 1em;
-  color: #fff;
-  background-color: #e3f2fd;
+  margin: 0.5em;
+  text-decoration: underline;
 }
