--- a/css/styles.css
+++ b/css/styles.css
@@ -12,5 +12,13 @@ body {
   width: auto;
   padding: 1em;
   margin: 0.5em;
+  text-align: center;
   text-decoration: underline;
+  text-decoration-color: #66a8d6;
+}
+
+.block {
+  margin-left: 4em;
+  margin-right: 4em;
+  display: inline-block;
 }
